@@ -108,11 +108,11 @@ public final class Services {
      * @return The service or <code>null</code> if absent
      */
     public static <S extends Object> S optService(final Class<? extends S> clazz) {
-        try {
-            return getService(clazz);
-        } catch (final IllegalStateException e) {
+        final com.openexchange.server.ServiceLookup serviceLookup = REF.get();
+        if (null == serviceLookup) {
             return null;
         }
+        return serviceLookup.getService(clazz);
     }
 
 }
